--- a/assets/translations/sw.json
+++ b/assets/translations/sw.json
@@ -32,5 +32,21 @@
   "last_name_text": "Jina La Mwisho",
   "email_text": "Barua Pepe",
   "phone_text": "Simu",
-  "password_text": "Neno Siri"
+  "password_text": "Neno Siri",
+  "home_text": "Nyumbani",
+  "card_text": "Kadi",
+  "old_password_text": "Neno Siri La Zamani",
+  "new_password_text": "Neno Siri Jipya",
+  "save_text": "Hifadhi",
+  "error_text": "Hitilafu",
+  "success_text": "Mafanikio",
+  "credentials_not_correct_text": "Kitambulisho si sahihi",
+  "account_registered_text": "Akaunti imesajiliwa",
+  "payment_complete_text": "Malipo Yamekamilika",
+  "reminder_set_text": "Kikumbusho Kimewekwa",
+  "password_changed_text": "Nenosiri Limebadilishwa",
+  "old_password_not_match_text": "Nenosiri la Zamani Hailingani",
+  "card_created_text": "Kadi yako imeundwa",
+  "card_failed_create_text": "Imeshindwa kuunda kadi",
+  "empty_fields_error_text": "Tafadhali jaza sehemu zote"
 }
